--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,9 @@ jobs:
           - macos-latest
           - windows-latest
         go:
-          - '1.18'
-          - '1.17'
-          - '1.16'
+          - "1.18"
+          - "1.17"
+          - "1.16"
     runs-on: ${{ matrix.os }}
     steps:
       - name: setup Go
@@ -36,20 +36,20 @@ jobs:
       - uses: actions/checkout@v3
       - name: test (freebsd, 1.17)
         id: test
-        uses: vmactions/freebsd-vm@v0.1.7
+        uses: vmactions/freebsd-vm@v0.1.8
         with:
           usesh: true
           prepare: pkg install -y go
           run: |
             go test
 
-  lint:
+  fmt:
     runs-on: ubuntu-latest
     steps:
       - name: setup Go
         uses: actions/setup-go@v3
         with:
-          go-version: '1.18'
+          go-version: "1.18"
 
       - name: checkout
         uses: actions/checkout@v3
@@ -57,6 +57,24 @@ jobs:
       - name: gofmt
         run: |
           test -z "$(gofmt -s -d . | tee /dev/stderr)"
+
+  lint:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: "1.18"
+
+      - name: checkout
+        uses: actions/checkout@v3
 
       - name: vet
         run: |
@@ -67,4 +85,3 @@ jobs:
         continue-on-error: true
         with:
           version: latest
-          skip-go-installation: true
